--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ typer = {extras = ["all"], version = "^0.7.0"}
 rich = "<=13"
 pynput = "^1.7.6"
 pygame = "^2.1.2"
+pyyaml = "^6.0"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
